# BOOST3

src/: Duncan_GPS_Instructions_7-13-17.txt  Duncan_Navigation_Instructions_7-13-17.txt  waypoint_following_instructions.txt
src/beginner_tutorials/: package.xml  package.xml~
src/boost_coarse_gps_odometry/: CMakeLists.txt  package.xml
src/boost_coarse_gps_odometry/launch/: coarse_gps_odometry.launch
src/boost_coarse_gps_odometry/src/: coarse_gps_odometry.cpp  tilt_correction_test.cpp
src/boost_config/: CMakeLists.txt  package.xml
src/boost_config/config/: boost_controller.yaml  teleop.config.yaml  teleop.config.yaml~
src/boost_config/config/twist_mux/: joystick.yaml  twist_mux_locks.yaml  twist_mux_topics.yaml  twist_mux_topics.yaml~
src/boost_gps_heading/: CMakeLists.txt  package.xml
src/boost_gps_heading/src/: avg_heading_from_gps.cpp  avg_heading_from_utm.cpp  avg_heading_from_utm_service.cpp  gps_imu_publisher.cpp  heading_from_gps.cpp
src/boost_gps_line_follower/: CMakeLists.txt  package.xml
src/boost_gps_line_follower/src/: line_follower.cpp  line_follower2.cpp  publishArray.cpp
src/boost_laser_processing/: CMakeLists.txt  package.xml
src/boost_laser_processing/src/: voxelize_and_plane_segment.cpp
src/boost_move_base/: CMakeLists.txt  package.xml
src/boost_nav_startup/: CMakeLists.txt  package.xml
src/boost_nav_startup/launch/: .nav_drivers.launch.swp  line_following.launch  nav_drivers.launch  nav_drivers.launch~  perception_startup.launch  sensor_drivers.launch  urdf_test.launch~  utm_collector.launch  viz_startup.launch
src/boost_nav_startup/src/: gps_point_collector.cpp  gps_point_collector.cpp~  um7_covariance_pub.cpp  utm_point_collector.cpp
src/boost_nav_vision/: CMakeLists.txt  package.xml
src/boost_nav_vision/launch/: boost_nav_vision.launch
src/boost_nav_vision/msg/: Heading.msg
src/boost_nav_vision/src/: nav_3vistor_node.cpp
src/boost_navigation/: CMakeLists.txt  package.xml
src/boost_navigation/config/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
src/boost_navigation/config/coarse_gps/: base_local_planner_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
src/boost_navigation/config/odom/: base_local_planner_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
src/boost_navigation/launch/: boost_move_base.launch  boost_move_base_coarse_gps.launch  boost_move_base_odom.launch  gps_nav_startup.launch  gps_odom_fusion.launch  navsat_transform.launch  rotate_image.launch  ukf_gps.launch  ukf_odom.launch
src/boost_odom/: CMakeLists.txt  package.xml
src/boost_odom/src/: boost_odom_pub.cpp
src/boost_urdf/robots/: boost_stalker.urdf  boost_stalker.urdf~
src/hebi/: CMakeLists.txt  README.txt
src/hebi/include/hebi/c/: hebi_command.h  hebi_feedback.h
src/hebi/include/hebi/cpp/: color.hpp  feedback.cpp  feedback.hpp  group.cpp  group.hpp  group_feedback.hpp  info.cpp  info.hpp  lookup.cpp  module.hpp
src/hebi/launch/: base_teleop.launch
src/hebi/lib/: libhebi.so.0
src/hebi/src/: arm_stow_initial.cpp  stalker_base_motor_commands.cpp  stalker_base_motor_commands.cpp~
src/image_converter/: CMakeLists.txt~  package.xml
src/image_converter/src/: image_to_mono16.cpp  stitcher2.cpp
src/laser_cam_calibration/: CMakeLists.txt  package.xml
src/laser_cam_calibration/launch/: captureCalibrationData.launch
src/my_pcl_tutorial/: CMakeLists.txt  package.xml
src/my_pcl_tutorial/src/: example.cpp
src/pointcloud_v1/: CMakeLists.txt  package.xml
src/pointcloud_v1/src/: segmentation_sick.cpp
src/quanergy_client_ros/: CMakeLists.txt
src/quanergy_client_ros/launch/: client.launch
src/quanergy_client_ros/settings/: client.xml
src/stalker_base/: CMakeLists.txt  package.xml
src/stalker_base/include/hebi/c/: hebi_info.h
src/stalker_base/include/hebi/cpp/: command.cpp  command.hpp  group_command.hpp  group_info.hpp  lookup.hpp  mac_address.hpp  module.cpp  vector_3_f.hpp
src/stalker_base/include/stalker_base/: stalker_hw_interface.h
src/stalker_base/launch/: stalker_base.launch
src/stalker_base/lib/: libhebi.so.0.10
src/stalker_base/src/: stalker_base.cpp  stalker_hw_interface.cpp
src/um7/src/: main.cpp
